--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "ReactAnimations",
   "version": "0.0.1",
   "private": true,
-  "homepage": "https://github.com/Mannaio/React-Coming-Soon",
+  "homepage": "https://mannaio.github.io/React-Coming-Soon",
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "react-scripts": "0.9.5"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy" : "npm run build&&gh-pages -d build"
   }
 }
